--- a/color.css
+++ b/color.css
@@ -21,15 +21,12 @@ li a:hover{
     text-decoration: none;
     color: white;
 }
-#Main{
+#Main {
     width: 100%;
-    /* background-color: aquamarine; */
-    /* height: 90vh; */
-    display:flex;
-    justify-content: center;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;    
     margin: 5px 0 15rem 0;
-    /* flex-direction: column; */
-    
 }
 #weather{
     width: 10rem;
@@ -64,3 +61,16 @@ p{
     border-radius: 10px;
     padding: 30px 40px;
 }  
+#result {
+    margin-top: 10px;
+    text-align: center;
+    color: red;
+    min-height: 20px; 
+}
+#search-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px; 
+    width: 100%;
+}
